# search

./: .dockerignore  .env  Dockerfile  README.md  requirements.txt  search_similar_tool.py  server.py  test_mcp.py  upload.sh
search-similar-mcp/: Dockerfile  README.md  main.py  pyproject.toml  search_similar_tool.py  test_search_tool.py  upload.sh
